[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Enemy/Enemy.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 0.001

[sub_resource type="SpatialMaterial" id=2]
metallic = 0.1
metallic_specular = 0.3
roughness = 0.0
clearcoat_enabled = true
clearcoat = 1.0
clearcoat_gloss = 0.5
subsurf_scatter_enabled = true
subsurf_scatter_strength = 0.0

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )
metallic = 0.1
roughness = 0.0

[sub_resource type="CapsuleShape" id=4]

[sub_resource type="CylinderShape" id=5]
radius = 2.0

[node name="Enemy" type="KinematicBody"]
collision_mask = 3
script = ExtResource( 1 )

[node name="BodyMesh" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="BodyMesh2" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -0.7 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="BodyColl" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 4 )

[node name="SearchArea" type="Area" parent="."]

[node name="CollisionPolygon" type="CollisionPolygon" parent="SearchArea"]
transform = Transform( -1.62921e-07, 2, -4.88762e-07, 0, -3.25841e-07, -3, -1, -3.25841e-07, 7.96294e-14, 0, 0, 0 )
polygon = PoolVector2Array( 0, 0, 20, -8, 20, 8 )

[node name="DamageArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DamageArea"]
shape = SubResource( 5 )

[node name="isEnemy" type="Spatial" parent="."]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
[connection signal="body_entered" from="SearchArea" to="." method="_on_SearchArea_body_entered"]
[connection signal="body_exited" from="SearchArea" to="." method="_on_SearchArea_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
